--- a/.github/workflows/sub-web.yml
+++ b/.github/workflows/sub-web.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Update sub-web
       run: |
         rm -rf sub-web
-        git clone https://github.com/iEngne/sub-web
+        git clone https://github.com/iEngne/sub-web.git
 
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
