--- a/subconverter/pref.ini
+++ b/subconverter/pref.ini
@@ -1,6 +1,6 @@
 [common]
 ;API mode, set to true to prevent loading local subscriptions or serving local files directly
-api_mode=true
+api_mode=false
 
 ;Access token used for performing critical action through Web interface
 api_access_token=password
@@ -127,7 +127,7 @@ write_managed_config=true
 
 ;Address prefix for MANAGED-CONFIG info, without the trailing "/".
 ;This address will also be used for generating /getruleset, /qx-rewrite, /qx-script addresses.
-managed_config_prefix=https://subc-now.vercel.app
+managed_config_prefix=http://127.0.0.1:25500
 
 ;Managed config update interval in seconds, determine how long the config will be updated.
 config_update_interval=86400
@@ -215,7 +215,7 @@ custom_proxy_group=!!import:snippets/groups.txt
 
 [template]
 ;The file scope limit of 'include' statement inside the templates.
-template_path=
+template_path=templates
 
 ;The following settings will be added to the "global" scope of the template variables
 ;Value of 'clash.http_port' can be accessed with 'global.clash.http_port' in the template.
@@ -263,7 +263,7 @@ serve_file_root=
 log_level=info
 print_debug_info=false
 max_pending_connections=10240
-max_concurrent_threads=1
+max_concurrent_threads=2
 max_allowed_rulesets=0
 max_allowed_rules=0
 max_allowed_download_size=0
@@ -272,5 +272,5 @@ cache_subscription=60
 cache_config=300
 cache_ruleset=21600
 script_clean_context=true
-async_fetch_ruleset=true
+async_fetch_ruleset=false
 skip_failed_links=false
