修改trigger默认使用release

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ on:
       branch:
         description: 'update subconverter from where?(action/build/release)'
         required: false
-        default: 'action'
+        default: 'release'
       tag:
         description: 'specific version tag if branch is "release"'
         required: false
