因vercel.app被墙，使用自定义域名

--- a/subconverter/pref.ini
+++ b/subconverter/pref.ini
@@ -127,8 +127,9 @@ write_managed_config=true
 
 ;Address prefix for MANAGED-CONFIG info, without the trailing "/".
 ;This address will also be used for generating /getruleset, /qx-rewrite, /qx-script addresses.
-managed_config_prefix=https://subc-now.vercel.app
-
+;managed_config_prefix=https://subc-now.vercel.app
+;vercel使用自定义域名
+https://subc.septe2n.cf
 ;Managed config update interval in seconds, determine how long the config will be updated.
 config_update_interval=86400
 
