--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -163,7 +163,7 @@ jobs:
         if [ -e subconverter/pref.example.ini ]; then 
           cp -f subconverter/pref.example.ini subconverter/pref.ini
         fi
-        sed -i 's/managed_config_prefix=http:\/\/127.0.0.1:25500/managed_config_prefix=https:\/\/subc-now.vercel.app/g' subconverter/pref.ini
+        sed -i 's/managed_config_prefix=http:\/\/127.0.0.1:25500/managed_config_prefix=https:\/\/subc.septe2n.cf/g' subconverter/pref.ini
         sed -i 's/async_fetch_ruleset=false/async_fetch_ruleset=true/g' subconverter/pref.ini
     - name: Modify pref.ini by files
       if: ${{ env.modify_method == 'files' }}
